# lex-web

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  lex.toml
.github/workflows/: lex.yml
bench/: .gitignore  README.md  REPORT.md  floor.lex  pipeline.lua  router_floor.lex  run-scaling.sh  run.sh  server.lex
bench/servers/: express_bench.js  fastapi_bench.py  fastapi_bench_many.py  lex_web_bench.lex  lex_web_bench_db.lex  lex_web_bench_listfold.lex  (+4 more)
bench/servers/axum_bench/: Cargo.toml
bench/servers/axum_bench/src/: main.rs
examples/: auth_modes.lex  bank_transfers.lex  bookmarks_api.lex  chat_app.lex  csms_outbound.lex  fastapi_style.lex  jsonrpc_ws.lex  middleware_custom.lex  streaming_api.lex  todos_api.lex  upload.lex  url_shortener.lex  users_api.lex  webhook_receiver.lex  with_lex_orm.lex
src/: auth.lex  auth_apikey.lex  auth_basic.lex  auth_oauth2.lex  background.lex  body.lex  crypto.lex  ctx.lex  depends.lex  docs.lex  exceptions.lex  lifespan.lex  middleware.lex  multipart.lex  openapi.lex  params.lex  response.lex  route_trie.lex  router.lex  serve.lex  static_files.lex  status.lex  stream.lex  sub_router.lex  test_fixtures.lex  testing.lex  web.lex  ws.lex
tests/: test_auth.lex  test_auth_apikey.lex  test_auth_basic.lex  test_auth_oauth2.lex  test_background.lex  test_body.lex  test_ctx.lex  test_depends.lex  test_docs.lex  test_exceptions.lex  test_lifespan.lex  test_middleware.lex  test_multipart.lex  test_openapi.lex  test_params.lex  test_response.lex  test_router.lex  test_static_files.lex  test_status.lex  test_sub_router.lex
(+5 files in other folders)
