[package]
name = "axum-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "axum-bench"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
